<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">
        
	    <RadioGroup
        android:id="@+id/rg_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_all"
            style="@style/tab_menu_item"
            android:text="@string/all" 
            android:textColor="@drawable/color_radiobutton"  
            android:background="@drawable/radio_group_selector"/>

        <RadioButton
            android:id="@+id/rb_app"
            style="@style/tab_menu_item"
            android:text="@string/app" 
            android:textColor="@drawable/color_radiobutton"  
            android:background="@drawable/radio_group_selector"/>

        <RadioButton
            android:id="@+id/rb_picture"
            style="@style/tab_menu_item"
            android:text="@string/picture" 
            android:textColor="@drawable/color_radiobutton"  
            android:background="@drawable/radio_group_selector"/>

        <RadioButton
            android:id="@+id/rb_music"
            style="@style/tab_menu_item"
            android:text="@string/music" 
            android:textColor="@drawable/color_radiobutton"  
            android:background="@drawable/radio_group_selector"/>

    </RadioGroup>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px" />
    
    </LinearLayout>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1" >
        
	    <android.support.v4.view.ViewPager
        android:id="@+id/vpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
	    
    </LinearLayout>      

</LinearLayout>
