<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:singleLine="true"
            android:background="@drawable/qq_edit_login"
            android:hint="@string/account"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_below="@id/et_account"
            android:singleLine="true"
            android:password="true"
            android:background="@drawable/qq_edit_login"
            android:hint="@string/pwd"
            android:ems="10" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
			android:layout_alignLeft="@id/et_pwd"
            android:layout_below="@id/et_pwd"
            
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:text="@string/register" 
            android:textColor="#ffffff"
            android:background="@drawable/background_button_div"/>
        
		<Button
            android:id="@+id/btn_back"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_pwd"
            android:layout_alignRight="@id/et_pwd"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            
            android:text="@string/back" 
            android:textColor="#ffffff"
            android:background="@drawable/background_button_div"/>        
        
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:layout_alignRight="@id/btn_back"
			android:layout_alignLeft="@id/btn_register"
            android:layout_below="@id/btn_back"
            
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:text="@string/login" 
            android:textColor="#ffffff"
            android:background="@drawable/background_button_div"/>

</RelativeLayout>