<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aaaaaa"   >

    <com.ustc.sharefile.model.ClipImageLayout
        android:id="@+id/id_clipImageLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/size1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/size1"
                android:paddingTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/Title_bg"
                android:background="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/size2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/size2"
                android:paddingTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/Title_bg"
                android:background="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/size3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/size3"
                android:textColor="@color/Title_bg"
                android:background="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/size4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/size4"
                android:textColor="@color/Title_bg"
                android:background="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/size5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/size5"
                android:textColor="@color/Title_bg"
                android:background="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>

    </com.ustc.sharefile.model.ClipImageLayout>
    

</RelativeLayout>
